--- a/src/styles/mixins/_picker.scss
+++ b/src/styles/mixins/_picker.scss
@@ -39,6 +39,10 @@
     }
   }
 
+  div.content-container input{
+    width: 100%;
+  }
+
   .react-select-cmp-container {
     width: 100%;
   }
